<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_detalle_chord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloLabel"
        android:textSize="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/detalleChordTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="Mi Nombre Completo"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="#ededed"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autorLabel"
        android:textSize="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/detalleChordAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="Mi Nombre Completo"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="#ededed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario_detalle"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver Perfil"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/btnBlueNormal"
            android:id="@+id/detalleChordUsuarioPerfil"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="Mi Nombre Completo"
        android:id="@+id/detalleChordUsuario"
        />



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:id="@+id/lineaNombre"
        android:background="#ededed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button.Blue"
        android:text="@string/editar_chord"
        android:id="@+id/btnDetalleEditar"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button"
        android:text="@string/compartir_chord"
        android:id="@+id/btnDetalleCompartir"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button.Warning"
        android:text="@string/eliminar_chord"
        android:id="@+id/btnDetalleEliminar"
        />
    </LinearLayout>

</LinearLayout>