<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentSignup">

<RelativeLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crear_cuenta_mayus"
        android:id="@+id/titulo"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrapperName"
        android:layout_margin="5dp"
        android:layout_below="@id/titulo"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtNameReg"
            android:hint="@string/txt_nombre_completo"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrapperUsername"
        android:layout_margin="5dp"
        android:layout_below="@id/wrapperName"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtEmailReg"
            android:hint="@string/txt_correo"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrapperPassword"
        android:layout_margin="5dp"
        android:layout_below="@id/wrapperUsername"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtPasswordReg"
            android:hint="@string/txt_contraseña"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button"
        android:text="@string/button_registrar"
        android:id="@+id/btnReg"
        android:layout_below="@id/wrapperPassword"
        android:layout_marginBottom="30dp"
        />


</RelativeLayout>
</ScrollView>