<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/selecciona_tipo"
            android:id="@+id/tituloInfo"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical|center_horizontal"
            style="@style/AppTheme.Button"
            android:background="@color/acorde"
            android:text="@string/acorde"
            android:id="@+id/acorde_tipo_button"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/tituloInfo"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical|center_horizontal"
            style="@style/AppTheme.Button"
            android:background="@color/letra"
            android:text="@string/letra"
            android:id="@+id/letra_tipo_button"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/acorde_tipo_button"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical|center_horizontal"
            style="@style/AppTheme.Button"
            android:background="@color/blanca"
            android:text="@string/blanca"
            android:id="@+id/blanco_tipo_button"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/letra_tipo_button"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical|center_horizontal"
            style="@style/AppTheme.Button"
            android:background="@color/eliminada"
            android:text="@string/eliminada"
            android:id="@+id/eliminada_tipo_button"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/blanco_tipo_button"
            />


    </RelativeLayout>
</ScrollView>