<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/eliminar_amigo"
            android:id="@+id/titulo"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button.Blue"
            android:text="@string/cancelar"
            android:layout_below="@+id/titulo"
            android:id="@+id/btnEliminarAmigoDialogNo"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button.Warning"
            android:text="@string/elimina"
            android:layout_below="@+id/btnEliminarAmigoDialogNo"
            android:id="@+id/btnEliminarAmigoDialogSi"
            />


    </RelativeLayout>
</ScrollView>