<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/edit_profile"
            android:id="@+id/titulo"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wrapperName"
            android:layout_margin="5dp"
            android:layout_below="@id/titulo"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtNameEdit"
                android:hint="@string/txt_nombre_completo"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wrapperUsername"
            android:layout_margin="5dp"
            android:layout_below="@id/wrapperName"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtEmailEdit"
                android:hint="@string/txt_correo"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wrapperPassword"
            android:layout_margin="5dp"
            android:layout_below="@id/wrapperUsername"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtEstadoEdit"
                android:hint="@string/txt_estado"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hecho"
            android:id="@+id/btnEditProfile"
            style="@style/AppTheme.Button"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/wrapperPassword"
            android:padding="10dp"
            />



    </RelativeLayout>
</ScrollView>