<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ayuda_nueva_letra"
            android:id="@+id/tituloInfo"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/ayuda_nueva_letra_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayuda_nueva_letra_txt"
            android:layout_below="@id/tituloInfo"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/AppTheme.Button"
            android:text="@string/hecho"
            android:id="@+id/ayuda_nueva_letra_hecho_button"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/ayuda_nueva_letra_texto"
            />



    </RelativeLayout>
</ScrollView>